samples/_failures_safe/1761484007_35bb45_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_83b53e32.c: In function ‘main’:
./samples/SAFE/__tmp_83b53e32.c:158:57: error: expected ‘]’ at end of input
  158 |             printf("Failed to add edge %d-%d\n", edges[i
      |                                                         ^
      |                                                         ]
./samples/SAFE/__tmp_83b53e32.c:158:13: error: expected declaration or statement at end of input
  158 |             printf("Failed to add edge %d-%d\n", edges[i
      |             ^~~~~~
./samples/SAFE/__tmp_83b53e32.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_83b53e32.c:158:13: error: expected declaration or statement at end of input
